--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.71'
+    ext.archLifecycleVersion= '2.2.0'
     repositories {
         google()
         jcenter()
