--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,8 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner
+        "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -24,6 +25,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/atomicfu.kotlin_module'
+    }
+
 }
 
 dependencies {
@@ -37,10 +42,19 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'org.assertj:assertj-core:3.15.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.1'
+
+    testImplementation 'android.arch.core:core-testing:2.1.0'
+    testImplementation 'junit:junit:4.12'
+//    androidTestImplementation ('androidx.test.espresso:espresso-core:3.1.0',{
+//        exclude group:'com.android.support', module: 'support-annotations'
+//    })
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    testImplementation 'androidx.test.ext:junit:1.1.1'
+
+
+
+
 
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
