--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,9 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner
-        "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
     }
     buildTypes {
         release {
@@ -44,13 +45,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    testImplementation 'android.arch.core:core-testing:2.1.0'
+    //testImplementation 'android.arch.core:core-testing:2.1.0'
     testImplementation 'junit:junit:4.12'
-//    androidTestImplementation ('androidx.test.espresso:espresso-core:3.1.0',{
-//        exclude group:'com.android.support', module: 'support-annotations'
-//    })
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation ('androidx.test.espresso:espresso-core:3.1.0',{
+        exclude group:'com.android.support', module: 'support-annotations'
+    })
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    testImplementation 'androidx.test.ext:junit:1.1.1'
+
+    //testImplementation 'androidx.test.ext:junit:1.1.1'
 
 
 
