--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    //testImplementation 'android.arch.core:core-testing:2.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation ('androidx.test.espresso:espresso-core:3.1.0',{
@@ -53,7 +52,6 @@ dependencies {
     })
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
-    //testImplementation 'androidx.test.ext:junit:1.1.1'
 
 
 
@@ -72,5 +70,11 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:$room_version"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
+
+    //recyclerview
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
+
 
 }
